--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,42 @@
 ---
-title: "Ledermod.com"
-eleventyComputed:
-  description: Für Anfragen erreichen Sie uns unter {{ site.tel }}
+title: Ledermod.com
+description: Für Exklusive Gürtel und Accessoires
 layout: default
 ---
-<section class="min-h-screen flex items-center text-center">
-  <div class="w-full">
-    <div class="relative">
-      <div class="max-w-[1080px] mx-auto px-10">
-        <picture>
-          <source type="image/jpeg" media="(min-width: 520px)" srcset="/img/logo-big.png">
-          <img class="w-full" width="540" height="100" src="/img/logo.png" alt="Ledermod Logo">
-        </picture>
-      </div>
-      <div class="absolute top-1/3 bg-red-700 h-1/4 w-full -z-10"></div>
-    </div>
-    <h1 class="mt-16 text-2xl font-bold"><a href="/">www.ledermod.com</a></h1>
+
+<div class="flex flex-col min-h-screen justify-between px-4 md:px-8">
+  <div></div>
+
+  <div class="max-w-3xl mx-auto">
+    <img class="w-full" width="800" height="160" src="/img/logo.png" alt="Ledermod Logo">
   </div>
-</section>
+
+  
+  <section class="text-center">
+    <h1 class="text-xl md:text-4xl font-bold">
+      Exklusive Gürtel und Accessoires<br />aus feinstem Leder
+    </h1>
+    <p class="md:text-2xl">die perfekten Begleiter für Ihre besonderen Anlässe...</p>
+  </section>
+
+  
+  <section class="max-w-5xl mx-auto w-full">
+    <div class="grid grid-cols-3 gap-6 xl:gap-10">
+      <a href="/img/produkt/ledermod-braune-ledergeldboerse-herren.jpg" target="_blank"><img src="/img/produkt/ledermod-braune-ledergeldboerse-herren-min.jpg" alt="Braune Leder Geldbörse für Herren" /></a>
+      <a href="/img/produkt/ledermod-dunkelbrauner-lederguertel-herren.jpg" target="_blank"><img src="/img/produkt/ledermod-dunkelbrauner-lederguertel-herren-min.jpg" alt="Dunkelbrauner Ledergürtel für Herren" /></a>
+      <a href="/img/produkt/ledermod-schwarze-aktentasche-leder-herren.jpg" target="_blank"><img src="/img/produkt/ledermod-schwarze-aktentasche-leder-herren-min.jpg" alt="Schwarze Leder Aktentasche für Herren" /></a>
+    </div>
+  </section>
+
+  
+  <section class="text-center">
+    <h2 class="text-xl md:text-4xl font-bold text-red-500">
+      Ledermod Premium-Gürtel und Accessoires
+    </h2>
+    <p class="md:text-2xl">
+      exklusiv in renommierten Fachgeschäften erhältlich<br />Vielen Dank für Ihr Interesse
+    </p>
+  </section>
+
+  <div class="h-20"></div>
+</div>
